# SPDX-License-Identifier: MIT
#
# Copyright (c) 2025 libsixel developers. See `AUTHORS`.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of
# this software and associated documentation files (the "Software"), to deal in
# the Software without restriction, including without limitation the rights to
# use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
# the Software, and to permit persons to whom the Software is furnished to do so,
# subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
# FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
# COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
# IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
#
option('png', type: 'feature', value: 'auto', description: 'Use libpng for PNG support')
option('tiff', type: 'feature', value: 'auto', description: 'Use libtiff for TIFF support')
option('jpeg', type: 'feature', value: 'auto', description: 'Use libjpeg for JPEG support')
option('webp', type: 'feature', value: 'auto', description: 'Use libwebp for WebP support')
option('lcms2', type: 'feature', value: 'auto', description: 'Use lcms2 for ICC color management')
option('librsvg', type: 'feature', value: 'auto', description: 'Use librsvg+cairo for SVG support')
option('curl', type: 'feature', value: 'auto', description: 'Use libcurl for network access')
option('fetch', type: 'feature', value: 'auto', description: 'Use libfetch for network access')
option('gdk_pixbuf2', type: 'feature', value: 'disabled', description: 'Use gdk-pixbuf2 loader')
option('gdk_pixbuf_loader', type: 'feature', value: 'disabled',
       description: 'Build gdk-pixbuf SIXEL loader module')
option('gd', type: 'feature', value: 'disabled', description: 'Use GD image library')
option('coregraphics', type: 'feature', value: 'auto', description: 'Use CoreGraphics framework')
option('appkit', type: 'feature', value: 'enabled',
       description: 'Use AppKit clipboard backend on macOS')
option('quicklook_preview', type: 'feature', value: 'auto', description: 'Use macOS Quick Look for preview extraction')
option('quicklook_extension', type: 'feature', value: 'auto', description: 'Build macOS Quick Look extension bundle')
option('wic', type: 'feature', value: 'auto', description: 'Use Windows Imaging Component')
option('wiccodec', type: 'feature', value: 'auto', description: 'Build WIC codec DLL')
option('register_dll', type: 'boolean', value: false, description: 'Register WIC codec DLL during installation')
option('winhttp', type: 'feature', value: 'auto', description: 'Use WinHTTP library')
option('winpthread', type: 'feature', value: 'disabled', description: 'Link with winpthread')
option('threads', type: 'feature', value: 'auto', description: 'Enable internal threadpool support')
option('bashcompletiondir', type: 'string', value: 'disabled', description: 'Directory for bash completion files (set to auto for default path)')
option('zshcompletiondir', type: 'string', value: 'disabled', description: 'Directory for zsh completion files (set to auto for default path)')
option('simd', type: 'feature', value: 'enabled', description: 'Use SIMD')
option('python', type: 'feature', value: 'disabled', description: 'Build libsixel_wheel Python package')
option('ruby', type: 'feature', value: 'disabled', description: 'Install Ruby bindings')
option('php', type: 'feature', value: 'disabled', description: 'Build libsixel-php FFI package')
option('perl', type: 'feature', value: 'disabled', description: 'Enable Perl binding tests')
option('tests', type: 'boolean', value: true, description: 'Build tests')
option('fuzz', type: 'boolean', value: false,
       description: 'Build libFuzzer targets under fuzz/')
option('amalgamated_lib', type: 'boolean', value: false,
       description: 'Build libsixel from the amalgamated translation unit')
option('amalgamated_tools', type: 'boolean', value: false,
       description: 'Build CLI tools from the amalgamated translation unit')
option('gcov', type: 'boolean', value: false, description: 'Enable gcov coverage flags')
option('analyzer', type: 'boolean', value: false,
       description: 'Enable static analyzer mode (clang: require scan-build, gcc: -fanalyzer, msvc/clang-cl: /analyze)')
option('msvc_pgo', type: 'combo', choices: ['off', 'generate', 'use'], value: 'off',
       description: 'MSVC-only PGO mode for /LTCG:PGINSTRUMENT or /LTCG:PGOPTIMIZE')
option('msvc_pgo_data', type: 'string', value: '',
       description: 'MSVC-only /PGD path used when msvc_pgo is generate or use')
option('img2sixel', type: 'feature', value: 'enabled', description: 'Build img2sixel tool')
option('sixel2png', type: 'feature', value: 'enabled', description: 'Build sixel2png tool')
option('abort_trace', type: 'feature', value: 'auto', description: 'Enable abort stack traces in CLI tools')
option('thumbnailer_command', type: 'feature', value: 'auto', description: 'Install sixel thumbnailer command')
option('shebang_file', type: 'string', value: '',
       description: 'Path to a shebang template file for built executables')
option('xsave_probe', type: 'feature', value: 'auto',
       description: 'Probe XGETBV during AVX capability detection')
option('emscripten_retain_compiler_settings', type: 'boolean', value: true,
       description: 'Add -sRETAIN_COMPILER_SETTINGS=1 for emscripten builds')
option('emscripten_noderawfs', type: 'boolean', value: true,
       description: 'Add -sNODERAWFS=1 for emscripten builds')
option('emscripten_stack_size', type: 'integer', value: 786432,
       description: 'Set -sSTACK_SIZE for emscripten builds')
option('emscripten_initial_memory', type: 'integer', value: 268435456,
       description: 'Set -sINITIAL_MEMORY for emscripten builds')
option('emscripten_environment', type: 'string', value: '',
       description: 'Set -sENVIRONMENT for emscripten builds')
option('emscripten_allow_memory_growth', type: 'boolean', value: true,
       description: 'Add -sALLOW_MEMORY_GROWTH=1 for emscripten builds')
option('emscripten_single_file', type: 'boolean', value: false,
       description: 'Add -sSINGLE_FILE=1 for emscripten builds')
option('emscripten_wasm_bigint', type: 'boolean', value: false,
       description: 'Add -sWASM_BIGINT=1 for emscripten builds')
option('emscripten_assertions', type: 'boolean', value: true,
       description: 'Keep ASSERTIONS enabled for emscripten builds')
# vim: set et ts=2:
