fs = import('fs')

amalgamation_gen = find_program(join_paths(meson.project_source_root(),
  'tools', 'gen-amalgamation.sh'))

amalgamation_completion = []
amalgamation_header_depends = []
if get_option('amalgamated_tools').enabled()
  gen_completion = find_program(join_paths(meson.project_source_root(),
    'tools', 'gen_completion_embed.py'))
  amalgamation_completion = [custom_target('amalgamation-completion-embed.h',
    input: ['../converters/shell-completion/bash/img2sixel',
            '../converters/shell-completion/zsh/_img2sixel'],
    output: 'completion_embed.h',
    command: [gen_completion, '@OUTPUT@', '@INPUT0@', '@INPUT1@']
  )]
  amalgamation_header_depends = amalgamation_completion
endif

amalgamation_suffix = 'c'
if have_objc and (have_quicklook_thumbnailing or have_clipboard_macos)
  amalgamation_suffix = 'm'
endif

amalgamation_units = files(
  '../src/output.c',
  '../src/fromsixel.c',
  '../src/tosixel.c',
  '../src/timer.c',
  '../src/assessment.c',
  '../src/sleep.c',
  '../src/lookup-common.c',
  '../src/lookup-8bit.c',
  '../src/lookup-float32.c',
  '../src/lookup-vpte-8bit.c',
  '../src/lookup-vpte-float32.c',
  '../src/palette-heckbert.c',
  '../src/palette-common-merge.c',
  '../src/palette-common-snap.c',
  '../src/palette-kmeans.c',
  '../src/palette.c',
  '../src/dither.c',
  '../src/dither-common-pipeline.c',
  '../src/dither-positional-8bit.c',
  '../src/dither-positional-float32.c',
  '../src/dither-fixed-8bit.c',
  '../src/dither-fixed-float32.c',
  '../src/dither-varcoeff-8bit.c',
  '../src/dither-varcoeff-float32.c',
  '../src/logger.c',
  '../src/colorspace.c',
  '../src/filter-clip.c',
  '../src/filter-colors.c',
  '../src/filter-dither.c',
  '../src/filter-encode.c',
  '../src/filter-factory.c',
  '../src/filter-final-merge.c',
  '../src/filter-load.c',
  '../src/filter-lookup.c',
  '../src/filter-palette.c',
  '../src/filter-resize.c',
  '../src/filter-sample.c',
  '../src/filter-vpte.c',
  '../src/filter.c',
  '../src/frame.c',
  '../src/cpu.c',
  '../src/pixelformat.c',
  '../src/scale.c',
  '../src/chunk.c',
  '../src/loader.c',
  '../src/loader-gdk-pixbuf2.c',
  '../src/loader-gnome-thumbnailer.c',
  '../src/loader-coregraphics.c',
  '../src/loader-quicklook.c',
  '../src/loader-wic.c',
  '../src/loader-gd.c',
  '../src/loader-libpng.c',
  '../src/loader-libjpeg.c',
  '../src/loader-builtin.c',
  '../src/loader-common.c',
  '../src/loader-registry.c',
  '../src/frompnm.c',
  '../src/fromgif.c',
  '../src/clipboard.c',
  '../src/encoder.c',
  '../src/decoder.c',
  '../src/decoder-parallel.c',
  '../src/options.c',
  '../src/writer.c',
  '../src/stb_image_write.c',
  '../src/status.c',
  '../src/compat_stub.c',
  '../src/malloc_stub.c',
  '../src/allocator.c',
  '../src/tty.c',
  '../src/threading.c',
  '../src/threadpool.c',
  '../src/quicklook_thumbnailing.m',
  '../src/clipboard_macos.m',
  '../converters/aborttrace.c',
  '../converters/cli.c',
  '../converters/completion_utils.c',
  '../converters/img2sixel.c',
  '../converters/malloc_stub.c',
  '../converters/sixel2png.c',
  '../assessment/lsqa.c',
)

amalgamation_headers = files(
  '../include/sixel.h.in',
  '../src/sixel_threads_config.h',
  '../src/sixel_atomic.h',
  '../src/threading.h',
  '../src/threadpool.h',
  '../src/allocator.h',
  '../src/logger.h',
  '../src/status.h',
  '../src/cpu.h',
  '../src/pixelformat.h',
  '../src/colorspace.h',
  '../src/palette.h',
  '../src/palette-common-merge.h',
  '../src/palette-common-snap.h',
  '../src/palette-heckbert.h',
  '../src/palette-kmeans.h',
  '../src/dither.h',
  '../src/dither-internal.h',
  '../src/dither-common-pipeline.h',
  '../src/dither-fixed-8bit.h',
  '../src/dither-fixed-float32.h',
  '../src/dither-positional-8bit.h',
  '../src/dither-positional-float32.h',
  '../src/dither-varcoeff-8bit.h',
  '../src/dither-varcoeff-float32.h',
  '../src/lookup-vpte-8bit.h',
  '../src/lookup-vpte-float32.h',
  '../src/lookup-8bit.h',
  '../src/lookup-float32.h',
  '../src/lookup-common.h',
  '../src/frame.h',
  '../src/scale.h',
  '../src/options.h',
  '../src/assessment.h',
  '../src/encoder.h',
  '../src/decoder.h',
  '../src/decoder-image.h',
  '../src/decoder-parallel.h',
  '../src/fromgif.h',
  '../src/frompnm.h',
  '../src/output.h',
  '../src/writer.h',
  '../src/chunk.h',
  '../src/tty.h',
  '../src/timer.h',
  '../src/sleep.h',
  '../src/clipboard.h',
  '../src/loader.h',
  '../src/loader-builtin.h',
  '../src/loader-common.h',
  '../src/loader-registry.h',
  '../src/loader-libpng.h',
  '../src/loader-libjpeg.h',
  '../src/loader-gd.h',
  '../src/loader-gdk-pixbuf2.h',
  '../src/loader-gnome-thumbnailer.h',
  '../src/loader-coregraphics.h',
  '../src/loader-quicklook.h',
  '../src/loader-wic.h',
  '../src/malloc_stub.h',
  '../src/stdio_stub.h',
  '../src/rgblookup.h',
  '../src/lso2.h',
  '../src/compat_stub.h',
  '../converters/aborttrace.h',
  '../converters/cli.h',
  '../converters/completion_utils.h',
  '../converters/getopt_stub.h',
  '../converters/malloc_stub.h',
)

amalgamation_out = custom_target('sixel-amalgamation.' + amalgamation_suffix,
  output: 'sixel.' + amalgamation_suffix,
  command: [amalgamation_gen, '@OUTPUT@', meson.project_source_root(),
            meson.project_build_root()],
  depend_files: amalgamation_units + amalgamation_headers + [config_h] +
    files('../tools/gen-amalgamation.sh'),
  depends: amalgamation_header_depends,
  build_by_default: true)

summary({'Amalgamation build': 'single translation unit generated'},
        section: 'amalgamation')
