fs = import('fs')

amalgamation_gen = find_program(join_paths(meson.project_source_root(),
  'tools', 'gen-amalgamation.sh'))

amalgamation_header_depends = [completion_embed]

amalgamation_suffix = 'c'
if have_objc and (have_quicklook_thumbnailing or have_clipboard_macos)
  amalgamation_suffix = 'm'
endif

amalgamation_units = files(
  '../src/output.c',
  '../src/fromsixel.c',
  '../src/tosixel.c',
  '../src/tosixel-highcolor.c',
  '../src/timer.c',
  '../assessment/assessment.c',
  '../src/sleep.c',
  '../src/lookup-fhedt-8bit.c',
  '../src/lookup-fhedt-float32.c',
  '../src/lookup-vptree-8bit.c',
  '../src/lookup-vptree-float32.c',
  '../src/palette-heckbert.c',
  '../src/palette-common-merge.c',
  '../src/palette-common-snap.c',
  '../src/palette-kmeans.c',
  '../src/palette-kmeans-assign.c',
  '../src/palette-kmeans-build.c',
  '../src/palette-kmedoids.c',
  '../src/palette-kcenter.c',
  '../src/palette.c',
  '../src/dither.c',
  '../src/dither-policy.c',
  '../src/dither-policy-none.c',
  '../src/dither-policy-fs.c',
  '../src/dither-policy-atkinson.c',
  '../src/dither-policy-jajuni.c',
  '../src/dither-policy-stucki.c',
  '../src/dither-policy-burkes.c',
  '../src/dither-policy-sierra1.c',
  '../src/dither-policy-sierra2.c',
  '../src/dither-policy-sierra3.c',
  '../src/dither-policy-a-dither.c',
  '../src/dither-policy-x-dither.c',
  '../src/dither-policy-bluenoise.c',
  '../src/dither-policy-interframe.c',
  '../src/dither-policy-lso2.c',
  '../src/dither-common-pipeline.c',
  '../src/dither-positional-8bit.c',
  '../src/dither-positional-float32.c',
  '../src/dither-fixed-8bit.c',
  '../src/dither-fixed-float32.c',
  '../src/dither-varcoeff-8bit.c',
  '../src/dither-varcoeff-float32.c',
  '../src/logger.c',
  '../src/colorspace.c',
  '../src/filter-clip.c',
  '../src/filter-colors.c',
  '../src/filter-dither.c',
  '../src/filter-gradient.c',
  '../src/filter-encode.c',
  '../src/filter-factory.c',
  '../src/filter-final-merge.c',
  '../src/filter-load.c',
  '../src/filter-lookup.c',
  '../src/filter-palette.c',
  '../src/filter-resize.c',
  '../src/filter-sample.c',
  '../src/filter-fhedt.c',
  '../src/filter-vptree.c',
  '../src/filter.c',
  '../src/frame.c',
  '../src/cpu.c',
  '../src/pixelformat.c',
  '../src/scale.c',
  '../src/chunk.c',
  '../src/loader.c',
  '../src/loader-gdk-pixbuf2.c',
  '../src/loader-gnome-thumbnailer.c',
  '../src/loader-coregraphics.c',
  '../src/loader-quicklook.c',
  '../src/loader-wic.c',
  '../src/loader-gd.c',
  '../src/loader-libpng.c',
  '../src/loader-libjpeg.c',
  '../src/loader-builtin.c',
  '../src/loader-common.c',
  '../src/loader-registry.c',
  '../src/frompnm.c',
  '../src/fromgif.c',
  '../src/clipboard.c',
  '../src/encoder.c',
  '../src/decoder.c',
  '../src/decoder-parallel.c',
  '../src/options.c',
  '../src/writer.c',
  '../src/stb_image_write.c',
  '../src/status.c',
  '../src/compat_stub.c',
  '../src/malloc_stub.c',
  '../src/allocator.c',
  '../src/tty.c',
  '../src/threading.c',
  '../src/threadpool.c',
  '../src/quicklook_thumbnailing.m',
  '../src/clipboard_macos.m',
  '../converters/aborttrace.c',
  '../converters/cli.c',
  '../converters/completion_utils.c',
  '../converters/path.c',
  '../converters/img2sixel.c',
  '../converters/malloc_stub.c',
  '../converters/sixel2png.c',
  '../assessment/lsqa.c',
)

amalgamation_headers = files(
  '../include/sixel.h.in',
  '../src/sixel_atomic.h',
  '../src/threading.h',
  '../src/threadpool.h',
  '../src/allocator.h',
  '../assessment/assessment.h',
  '../src/logger.h',
  '../src/status.h',
  '../src/cpu.h',
  '../src/pixelformat.h',
  '../src/colorspace.h',
  '../src/palette.h',
  '../src/palette-common-merge.h',
  '../src/palette-common-snap.h',
  '../src/palette-heckbert.h',
  '../src/palette-kmeans.h',
  '../src/palette-kmeans-assign.h',
  '../src/palette-kmeans-build.h',
  '../src/palette-kmedoids.h',
  '../src/palette-kcenter.h',
  '../src/dither.h',
  '../src/dither-policy.h',
  '../src/dither-policy-none.h',
  '../src/dither-policy-fs.h',
  '../src/dither-policy-atkinson.h',
  '../src/dither-policy-jajuni.h',
  '../src/dither-policy-stucki.h',
  '../src/dither-policy-burkes.h',
  '../src/dither-policy-sierra1.h',
  '../src/dither-policy-sierra2.h',
  '../src/dither-policy-sierra3.h',
  '../src/dither-policy-lso2.h',
  '../src/dither-policy-a-dither.h',
  '../src/dither-policy-x-dither.h',
  '../src/dither-policy-bluenoise.h',
  '../src/dither-policy-interframe.h',
  '../src/dither-internal.h',
  '../src/dither-common-pipeline.h',
  '../src/dither-fixed-8bit.h',
  '../src/dither-fixed-float32.h',
  '../src/dither-positional-8bit.h',
  '../src/dither-positional-float32.h',
  '../src/dither-varcoeff-8bit.h',
  '../src/dither-varcoeff-float32.h',
  '../src/lookup-fhedt-8bit.h',
  '../src/lookup-fhedt-float32.h',
  '../src/lookup-vptree-8bit.h',
  '../src/lookup-vptree-float32.h',
  '../src/frame.h',
  '../src/scale.h',
  '../src/options.h',
  '../src/encoder.h',
  '../src/decoder.h',
  '../src/decoder-image.h',
  '../src/decoder-parallel.h',
  '../src/fromgif.h',
  '../src/frompnm.h',
  '../src/output.h',
  '../src/writer.h',
  '../src/chunk.h',
  '../src/tty.h',
  '../src/timer.h',
  '../src/sleep.h',
  '../src/clipboard.h',
  '../src/loader.h',
  '../src/loader-builtin.h',
  '../src/loader-common.h',
  '../src/loader-registry.h',
  '../src/loader-libpng.h',
  '../src/loader-libjpeg.h',
  '../src/loader-gd.h',
  '../src/loader-gdk-pixbuf2.h',
  '../src/loader-gnome-thumbnailer.h',
  '../src/loader-coregraphics.h',
  '../src/loader-quicklook.h',
  '../src/loader-wic.h',
  '../src/malloc_stub.h',
  '../src/stdio_stub.h',
  '../src/classid-lookup-policy.h',
  '../src/classid-dither-policy.h',
  '../src/rgblookup.h',
  '../src/lso2.h',
  '../src/compat_stub.h',
  '../converters/aborttrace.h',
  '../converters/cli.h',
  '../converters/completion_utils.h',
  '../converters/getopt_stub.h',
  '../converters/malloc_stub.h',
)

amalgamation_out = custom_target('sixel-amalgamation.' + amalgamation_suffix,
  output: 'sixel.' + amalgamation_suffix,
  command: [amalgamation_gen, '@OUTPUT@', meson.project_source_root(),
            meson.project_build_root()],
  depend_files: amalgamation_units + amalgamation_headers + [config_h] +
    files('../tools/gen-amalgamation.sh'),
  depends: amalgamation_header_depends,
  build_by_default: true)

summary({'Amalgamation build': 'single translation unit generated'},
        section: 'amalgamation')
